force-app/main/default/objects/Feefo_Results__c/Feefo_Results__c.object-meta.xml
<CustomObject>
    <label>Feefo Results</label>
    <nameField>
        <label>Feefo Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feefo Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>