force-app/main/default/objects/Feefo_Results__c/fields/accom_duration__c.field-meta.xml
<CustomField>
    <fullName>accom_duration__c</fullName>
    <formula>IF(MID(product_answer_escape_w_flights__c, 9, 1) = &quot;3&quot;, &quot;3-Perfect length&quot;, 
IF(MID(product_answer_escape_w_flights__c, 9, 1) = &quot;2&quot;, &quot;2-More nights please&quot;, 
IF(MID(product_answer_escape_w_flights__c, 9, 1) = &quot;1&quot;, &quot;1-Less nights please&quot;, 
&quot;0-No Answer&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Escapes with Flights Campaign</inlineHelpText>
    <label>Accom Duration</label>
    <type>Text</type>
</CustomField>