force-app/main/default/objects/Feefo_Results__c/fields/Accom_Style_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Accom_Style_of_Travel__c</fullName>
    <formula>IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;7&quot;, &quot;7-Relaxation&quot;, 
IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;6&quot;, &quot;6-Romantic Getaway&quot;, 
IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;5&quot;, &quot;5-Family Holiday&quot;, 
IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;4&quot;, &quot;4-Special Occasion&quot;,
IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;3&quot;, &quot;3-Adventure&quot;,
IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;2&quot;, &quot;2-Cultural&quot;,
IF(MID(product_answer_escape_w_flights__c, 11, 1) = &quot;1&quot;, &quot;1-Business&quot;,
&quot;0-No Answer&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Escapes with Flights Campaign</inlineHelpText>
    <label>Accom Style of Travel</label>
    <type>Text</type>
</CustomField>