force-app/main/default/objects/Feefo_Results__c/fields/accom_value_for_money__c.field-meta.xml
<CustomField>
    <fullName>accom_value_for_money__c</fullName>
    <formula>IF(MID(product_answer_escape_w_flights__c, 13, 1) = &quot;3&quot;, &quot;3-Excellent&quot;, 
IF(MID(product_answer_escape_w_flights__c, 13, 1) = &quot;2&quot;, &quot;2-Satisfied&quot;, 
IF(MID(product_answer_escape_w_flights__c, 13, 1) = &quot;1&quot;, &quot;1-Poor&quot;, 
&quot;0-No Answer&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Escapes with Flights Campaign</inlineHelpText>
    <label>Accom Value for Money</label>
    <type>Text</type>
</CustomField>