force-app/main/default/objects/Feefo_Results__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( ISBLANK( order__r.Account__r.MiddleName ) , 
order__r.Account__r.FirstName&amp;&quot; &quot;&amp;order__r.Account__r.LastName, 
order__r.Account__r.FirstName&amp;&quot; &quot;&amp;order__r.Account__r.MiddleName&amp;&quot; &quot;&amp;order__r.Account__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>