force-app/main/default/objects/Feefo_Results__c/fields/Answer_fix__c.field-meta.xml
<CustomField>
    <fullName>Answer_fix__c</fullName>
    <label>Answer fix</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>