force-app/main/default/objects/Feefo_Results__c/fields/au_nz_order__c.field-meta.xml
<CustomField>
    <fullName>au_nz_order__c</fullName>
    <formula>CASE( order__r.RecordType.Name ,
 &quot;WT&quot;, &quot;NZ&quot;,
 &quot;TNZ&quot;, &quot;NZ&quot;,
 &quot;AU&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AU/NZ Order</label>
    <type>Text</type>
</CustomField>