force-app/main/default/objects/Feefo_Results__c/fields/BDM__c.field-meta.xml
<CustomField>
    <fullName>BDM__c</fullName>
    <formula>TEXT ( order__r.deal__r.BDM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM</label>
    <type>Text</type>
</CustomField>