force-app/main/default/objects/Feefo_Results__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <formula>IF(MID(Product_Question_Answer__c, 13, 1) = &quot;0&quot;, &quot;0-No Cruise Included&quot;, 
IF(MID(Product_Question_Answer__c, 13, 1) = &quot;3&quot;, &quot;3-Excellent&quot;, 
IF(MID(Product_Question_Answer__c, 13, 1) = &quot;2&quot;, &quot;2-Satisfied&quot;, 
IF(MID(Product_Question_Answer__c, 13, 1) = &quot;1&quot;, &quot;1-Poor&quot;, 
&quot;0-No Answer&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise</label>
    <type>Text</type>
</CustomField>