force-app/main/default/objects/Feefo_Results__c/fields/Cruise_Cabin_Booked_by__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Booked_by__c</fullName>
    <formula>TEXT (  order__r.deal__r.Cruise_Cabin_Booked_by__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise Cabin Booked by</label>
    <type>Text</type>
</CustomField>