force-app/main/default/objects/Feefo_Results__c/fields/Customers_Location__c.field-meta.xml
<CustomField>
    <fullName>Customers_Location__c</fullName>
    <label>Customers Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>