force-app/main/default/objects/Feefo_Results__c/fields/Customers_Name__c.field-meta.xml
<CustomField>
    <fullName>Customers_Name__c</fullName>
    <formula>order__r.full_name_purchaser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customers Name</label>
    <type>Text</type>
</CustomField>