force-app/main/default/objects/Feefo_Results__c/fields/Customers_Review_Online__c.field-meta.xml
<CustomField>
    <fullName>Customers_Review_Online__c</fullName>
    <label>Customers Review Online</label>
    <type>Url</type>
</CustomField>