force-app/main/default/objects/Feefo_Results__c/fields/Deal_and_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_and_Title__c</fullName>
    <formula>order__r.Deal_ID_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal and Title</label>
    <type>Text</type>
</CustomField>