force-app/main/default/objects/Feefo_Results__c/fields/deal_has_cruise__c.field-meta.xml
<CustomField>
    <fullName>deal_has_cruise__c</fullName>
    <formula>OR(
 INCLUDES(order__r.deal__r.deal_type__c ,&quot;cruise&quot;),
 INCLUDES( order__r.deal__r.deal_type_nz__c  ,&quot;cruise&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Has Cruise</label>
    <type>Checkbox</type>
</CustomField>