force-app/main/default/objects/Feefo_Results__c/fields/deal_has_flights__c.field-meta.xml
<CustomField>
    <fullName>deal_has_flights__c</fullName>
    <formula>order__r.deal__r.has_flights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Has Flights</label>
    <type>Checkbox</type>
</CustomField>