force-app/main/default/objects/Feefo_Results__c/fields/deal_is_escape__c.field-meta.xml
<CustomField>
    <fullName>deal_is_escape__c</fullName>
    <formula>order__r.Is_Escape_Deal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Is Escape</label>
    <type>Checkbox</type>
</CustomField>