force-app/main/default/objects/Feefo_Results__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <formula>TEXT ( order__r.departure_cities__r.city__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure City</label>
    <type>Text</type>
</CustomField>