force-app/main/default/objects/Feefo_Results__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <formula>IF(MID(Product_Question_Answer__c, 15, 1) = &quot;2&quot;, &quot;Yes - I would recommend to others&quot;, 
IF(MID(Product_Question_Answer__c, 15, 1) = &quot;1&quot;, &quot;No - I would not recommend&quot;, 
&quot;No Answer&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience</label>
    <type>Text</type>
</CustomField>