force-app/main/default/objects/Feefo_Results__c/fields/Flights_Airline_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Flights_Airline_Carrier__c</fullName>
    <formula>IF(MID(Product_Question_Answer__c, 3, 1) = &quot;3&quot;, &quot;3-Excellent&quot;, 
IF(MID(Product_Question_Answer__c, 3, 1) = &quot;2&quot;, &quot;2-Satisfied&quot;, 
IF(MID(Product_Question_Answer__c, 3, 1) = &quot;1&quot;, &quot;1-Poor&quot;, 
&quot;0-No Answer&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flights - Airline Carrier</label>
    <type>Text</type>
</CustomField>