force-app/main/default/objects/Feefo_Results__c/fields/Flights_Airline_changes__c.field-meta.xml
<CustomField>
    <fullName>Flights_Airline_changes__c</fullName>
    <formula>IF(MID(Product_Question_Answer__c, 7, 1) = &quot;1&quot;, &quot;Yes - Airline changes occurred&quot;, 
IF(MID(Product_Question_Answer__c, 7, 1) = &quot;2&quot;, &quot;No - Travelled as ticketed&quot;, 
&quot;No Answer&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flights - Airline changes</label>
    <type>Text</type>
</CustomField>