force-app/main/default/objects/Feefo_Results__c/fields/Flights_ticketed_by_UJ__c.field-meta.xml
<CustomField>
    <fullName>Flights_ticketed_by_UJ__c</fullName>
    <formula>order__r.Flights_ticketed_by_UJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flights by UJ</label>
    <type>Checkbox</type>
</CustomField>