force-app/main/default/objects/Feefo_Results__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Feefo Results</relationshipLabel>
    <relationshipName>Feefo_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>