force-app/main/default/objects/Feefo_Results__c/fields/Tour_Guide_Driver_On_Tour_Services__c.field-meta.xml
<CustomField>
    <fullName>Tour_Guide_Driver_On_Tour_Services__c</fullName>
    <formula>IF(MID(Product_Question_Answer__c, 11, 1) = &quot;3&quot;, &quot;3-Excellent&quot;, 
IF(MID(Product_Question_Answer__c, 11, 1) = &quot;2&quot;, &quot;2-Satisfied&quot;, 
IF(MID(Product_Question_Answer__c, 11, 1) = &quot;1&quot;, &quot;1-Poor&quot;, 
&quot;0-No Answer&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tour Guide / Driver / On Tour Services</label>
    <type>Text</type>
</CustomField>