force-app/main/default/objects/Feefo_Results__c/fields/when_looking_to_travel_again__c.field-meta.xml
<CustomField>
    <fullName>when_looking_to_travel_again__c</fullName>
    <formula>IF(MID(product_answer_escape_w_flights__c, 19, 1) = &quot;4&quot;, &quot;4-Within 1 month&quot;, 
IF(MID(product_answer_escape_w_flights__c, 19, 1) = &quot;3&quot;, &quot;3-Within 1-3 months&quot;, 
IF(MID(product_answer_escape_w_flights__c, 19, 1) = &quot;2&quot;, &quot;2-Within 3-6 months&quot;, 
IF(MID(product_answer_escape_w_flights__c, 19, 1) = &quot;1&quot;, &quot;1-6+ months&quot;, 
IF(MID(product_answer_escape_w_flights__c, 19, 1) = &quot;1&quot;, &quot;0-Unsure&quot;, 
&quot;0-No Answer&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Escapes with Flights Campaign</inlineHelpText>
    <label>When Looking to Travel Again?</label>
    <type>Text</type>
</CustomField>