force-app/main/default/objects/Feefo_Results__c/fields/Where_is_next_on_your_bucket_list__c.field-meta.xml
<CustomField>
    <fullName>Where_is_next_on_your_bucket_list__c</fullName>
    <formula>MID(  Product_Question_Answer__c  , 17, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Where is next on your bucket list</label>
    <type>Text</type>
</CustomField>