force-app/main/default/objects/Feefo_Results__c/fields/wheres_next__c.field-meta.xml
<CustomField>
    <fullName>wheres_next__c</fullName>
    <formula>MID(product_answer_escape_w_flights__c , 21, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Escapes with Flights Campaign</inlineHelpText>
    <label>Where&apos;s Next?</label>
    <type>Text</type>
</CustomField>