force-app/main/default/objects/Feefo_Results__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Customers_Name__c</columns>
    <columns>Star_Rating__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>NAME</columns>
    <columns>order__c</columns>
    <columns>Deal_and_Title__c</columns>
    <columns>Flight_Routing__c</columns>
    <columns>Flights_Airline_Carrier__c</columns>
    <columns>Flights_Airline_changes__c</columns>
    <columns>Accommodation__c</columns>
    <columns>Itinerary__c</columns>
    <columns>Tour_Guide_Driver_On_Tour_Services__c</columns>
    <columns>Customers_Review_Online__c</columns>
    <columns>Where_is_next_on_your_bucket_list__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>CS_Manager</group>
        <group>IT_Team</group>
        <group>Team_Leaders_CS</group>
    </sharedTo>
</ListView>